Cycles DDS oversaturation when alpha is in use #101850

Closed
opened 2022-10-16 02:50:30 +02:00 by tamooz br · 13 comments

System Information
Operating system: Arch Linux, Mesa 22.1.7-1
Graphics card: Intel HD Graphics 530

Blender Version
Broken: (2.80.74 (release candidate), 06312c6d2d, master, 2019-07-11), possibly earlier commit.
Worked: none, as 2.8 added alpha support for DDS in cycles.

Short description of error
When using the alpha channel of a DDS, for pixels in which the alpha isn't equal to 0 or 1, artifacts occur.
Exact steps for others to reproduce the error
Bugreport.blend
Test-Tex.dds

Load any model, add a material of any kind and an image texture, and load a DDS with alpha.
connect the alpha of the texture to any node. make sure the alpha or any node that makes use of it is connected to the material output.
now when you use the color, you'd see oddities, in older versions those pixels are completely white (1,1,1) and in newer, ones the value is increased to values above 1.

Screenshot 2022-10-17 at 20.18.47.png

**System Information** Operating system: Arch Linux, Mesa 22.1.7-1 Graphics card: Intel HD Graphics 530 **Blender Version** Broken: (2.80.74 (release candidate), 06312c6d2db8, master, 2019-07-11), possibly earlier commit. Worked: none, as 2.8 added alpha support for DDS in cycles. **Short description of error** When using the alpha channel of a DDS, for pixels in which the alpha isn't equal to 0 or 1, artifacts occur. **Exact steps for others to reproduce the error** [Bugreport.blend](https://archive.blender.org/developer/F13694290/Bugreport.blend) [Test-Tex.dds](https://archive.blender.org/developer/F13694293/Test-Tex.dds) Load any model, add a material of any kind and an image texture, and load a DDS with alpha. connect the alpha of the texture to any node. make sure the alpha or any node that makes use of it is connected to the material output. now when you use the color, you'd see oddities, in older versions those pixels are completely white (1,1,1) and in newer, ones the value is increased to values above 1. ![Screenshot 2022-10-17 at 20.18.47.png](https://archive.blender.org/developer/F13699956/Screenshot_2022-10-17_at_20.18.47.png)
Author

Added subscriber: @Koopa512

Added subscriber: @Koopa512

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I wasn't able to reproduce the issue, but my data may not suit the scenario. Can you upload simple .blend file with texture?

I wasn't able to reproduce the issue, but my data may not suit the scenario. Can you upload simple .blend file with texture?

Added subscriber: @aras_p

Added subscriber: @aras_p
Author
[Bugreport.blend](https://archive.blender.org/developer/F13694290/Bugreport.blend) [Test-Tex.dds](https://archive.blender.org/developer/F13694293/Test-Tex.dds)
Author

change to rendered view, and you'll see.
after packing or saving the image as a different format (and reloading it), the white line disappears. it also doesn't appear in EEVEE or Workbench, Doesn't happen on OSL, can't test GPU compute right now.

change to rendered view, and you'll see. after packing or saving the image as a different format (and reloading it), the white line disappears. it also doesn't appear in EEVEE or Workbench, Doesn't happen on OSL, can't test GPU compute right now.
Author

Found my Windows laptop, it also happens there, and on CPU compute (GTX 960M, both CUDA and OptiX)

Found my Windows laptop, it also happens there, and on CPU compute (GTX 960M, both CUDA and OptiX)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Aras Pranckevicius self-assigned this 2022-10-17 19:17:26 +02:00

I'll take a look. I suspect it might be similar alpha channel interpretation issues as in #99565.

I'll take a look. I suspect it might be similar alpha channel interpretation issues as in #99565.
Aras Pranckevicius changed title from DDS overstauration when alpha is in use to Cycles DDS oversaturation when alpha is in use 2022-10-17 19:19:34 +02:00

This issue was referenced by 427b0a0ab2

This issue was referenced by 427b0a0ab2c6fdbba5fd7285b907e59ac946b4f7

This issue was referenced by 603a534f09

This issue was referenced by 603a534f09b0f94f599c607240a4934f7c1a2ef6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101850
No description provided.